Fix .header collapsed margins

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,6 +24,10 @@ $susy: (
 	}
 }
 
+.header {
+	height: 100%;
+}
+
 .header-content {
 	@include container;
 
